--- a/index.html
+++ b/index.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <title>G.A.I.A. Chatbot</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>G.A.I.A Chatbot</title>
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-  <div id="chat-container">
-    <div id="header">¡Pregúntale a G.A.I.A.!</div>
-    <div id="chat"></div>
-    <div id="input-container">
-      <input type="file" id="imageInput" accept="image/*" capture="environment" style="display:none">
-      <img id="preview" src="" alt="Vista previa" style="display:none; max-width: 100%; margin-top: 10px;">
-      <button onclick="document.getElementById('imageInput').click()">Abrir Cámara</button>
-      <input type="text" id="prompt" placeholder="Escribe tu mensaje...">
+  <div class="chat-container">
+    <h1>🤖 G.A.I.A Chatbot</h1>
+    <div id="chat" class="chat-box"></div>
+
+    <div class="input-area">
+      <input type="file" accept="image/*" id="imageInput" />
+      <input type="text" id="prompt" placeholder="Escribe un mensaje..." />
       <button onclick="handleSend()">Enviar</button>
     </div>
   </div>
+
   <script src="script.js"></script>
 </body>
 </html>
